--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.17.0",
+    "mongodb": "^3.2.5",
     "multer": "^1.4.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
@@ -14,7 +15,7 @@
   },
   "scripts": {
     "start": "run-p start-server start-frontend",
-    "start-server": "nodemon --ignore src server.js",
+    "start-server": "nodemon --ignore src backend/server.js",
     "start-frontend": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
